# agent-engineer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ITERATION.md  LICENSE  OPTIMIZATION.md  README.md  README_CN.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
backend/: generator.py  requirements.txt  server.py
examples/: adaptive_solver.json  debate_team.json  project_manager.json  research_agent.json  strategy_optimizer.json
frontend/: index.html
graph_lib/: __init__.py  agents.py  paradigms.py
tests/: test_agents.py  test_paradigms.py
